--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,21 @@ aioflask==0.4.0
 asgiref==3.7.2
 asyncio==3.4.3
 blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
 Flask==2.3.3
 greenlet==2.0.2
 greenletio==0.10.1
 h11==0.14.0
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 pymegatools==1.0.2
+requests==2.31.0
 typing_extensions==4.7.1
+urllib3==2.0.4
 uvicorn==0.23.2
 Werkzeug==2.3.7
